src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> stmt_list
Rule 2     stmt_list -> simple_stmt
Rule 3     stmt_list -> stmt_list NEWLINE simple_stmt
Rule 4     if_stmt -> IF expression THEN NEWLINE stmt_list NEWLINE ENDIF
Rule 5     if_stmt -> IF expression THEN NEWLINE stmt_list NEWLINE ELSE NEWLINE stmt_list NEWLINE ENDIF
Rule 6     if_stmt -> IF expression THEN NEWLINE stmt_list NEWLINE ELSE if_stmt
Rule 7     while_stmt -> WHILE expression DO NEWLINE stmt_list NEWLINE ENDWHILE
Rule 8     for_stmt -> FOR assignment_stmt TO expression NEWLINE stmt_list NEWLINE NEXT VAR
Rule 9     simple_stmt -> expression
Rule 10    simple_stmt -> expr_list
Rule 11    simple_stmt -> arg_list
Rule 12    simple_stmt -> assignment_stmt
Rule 13    simple_stmt -> array_decl_stmt
Rule 14    simple_stmt -> if_stmt
Rule 15    simple_stmt -> while_stmt
Rule 16    simple_stmt -> for_stmt
Rule 17    simple_stmt -> output_stmt
Rule 18    simple_stmt -> input_stmt
Rule 19    simple_stmt -> function_stmt
Rule 20    simple_stmt -> return_stmt
Rule 21    array_decl_stmt -> DOUBLE array_index
Rule 22    array_decl_stmt -> INT array_index
Rule 23    assignment_stmt -> VAR EQUALS expression
Rule 24    assignment_stmt -> array_index EQUALS expression
Rule 25    input_stmt -> INPUT VAR
Rule 26    input_stmt -> INPUT array_index
Rule 27    output_stmt -> OUTPUT expression
Rule 28    return_stmt -> RETURN expression
Rule 29    function_header -> INT SUBROUTINE VAR LPAREN arg_list RPAREN
Rule 30    function_header -> DOUBLE SUBROUTINE VAR LPAREN arg_list RPAREN
Rule 31    function_header -> INT SUBROUTINE VAR LPAREN RPAREN
Rule 32    function_header -> DOUBLE SUBROUTINE VAR LPAREN RPAREN
Rule 33    function_stmt -> function_header NEWLINE stmt_list NEWLINE ENDSUBROUTINE
Rule 34    arg_list -> INT VAR
Rule 35    arg_list -> DOUBLE VAR
Rule 36    arg_list -> arg_list COMMA INT VAR
Rule 37    arg_list -> arg_list COMMA DOUBLE VAR
Rule 38    expr_list -> expression COMMA expression
Rule 39    expr_list -> expr_list COMMA expression
Rule 40    expression -> expression PLUS expression
Rule 41    expression -> expression MINUS expression
Rule 42    expression -> expression TIMES expression
Rule 43    expression -> expression DIVIDE expression
Rule 44    expression -> expression PERCENT expression
Rule 45    expression -> expression LESS_THAN expression
Rule 46    expression -> expression GREATER_THAN expression
Rule 47    expression -> expression LESS_EQUAL expression
Rule 48    expression -> expression GREATER_EQUAL expression
Rule 49    expression -> expression EQUALITY expression
Rule 50    expression -> expression NOT_EQUALITY expression
Rule 51    expression -> MINUS expression
Rule 52    expression -> LPAREN expression RPAREN
Rule 53    expression -> VAR LPAREN expression RPAREN
Rule 54    expression -> VAR LPAREN expr_list RPAREN
Rule 55    expression -> VAR LPAREN RPAREN
Rule 56    expression -> array_index
Rule 57    array_index -> VAR LBRACKET expression RBRACKET
Rule 58    expression -> literal
Rule 59    literal -> INT_CONST
Rule 60    literal -> DOUBLE_CONST
Rule 61    literal -> STRING_CONST
Rule 62    expression -> VAR

Terminals, with rules where they appear

COMMA                : 36 37 38 39
DIVIDE               : 43
DO                   : 7
DOUBLE               : 21 30 32 35 37
DOUBLE_CONST         : 60
ELSE                 : 5 6
ENDIF                : 4 5
ENDSUBROUTINE        : 33
ENDWHILE             : 7
EQUALITY             : 49
EQUALS               : 23 24
FOR                  : 8
GREATER_EQUAL        : 48
GREATER_THAN         : 46
IF                   : 4 5 6
INPUT                : 25 26
INT                  : 22 29 31 34 36
INT_CONST            : 59
LBRACKET             : 57
LESS_EQUAL           : 47
LESS_THAN            : 45
LPAREN               : 29 30 31 32 52 53 54 55
MINUS                : 41 51
NEWLINE              : 3 4 4 5 5 5 5 6 6 7 7 8 8 33 33
NEXT                 : 8
NOT_EQUALITY         : 50
OUTPUT               : 27
PERCENT              : 44
PLUS                 : 40
RBRACKET             : 57
RETURN               : 28
RPAREN               : 29 30 31 32 52 53 54 55
STRING_CONST         : 61
SUBROUTINE           : 29 30 31 32
THEN                 : 4 5 6
TIMES                : 42
TO                   : 8
VAR                  : 8 23 25 29 30 31 32 34 35 36 37 53 54 55 57 62
WHILE                : 7
error                : 

Nonterminals, with rules where they appear

arg_list             : 11 29 30 36 37
array_decl_stmt      : 13
array_index          : 21 22 24 26 56
assignment_stmt      : 8 12
expr_list            : 10 39 54
expression           : 4 5 6 7 8 9 23 24 27 28 38 38 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 52 53 57
for_stmt             : 16
function_header      : 33
function_stmt        : 19
if_stmt              : 6 14
input_stmt           : 18
literal              : 58
output_stmt          : 17
return_stmt          : 20
simple_stmt          : 2 3
statement            : 0
stmt_list            : 1 3 4 5 5 6 7 8 33
while_stmt           : 15

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . stmt_list
    (2) stmt_list -> . simple_stmt
    (3) stmt_list -> . stmt_list NEWLINE simple_stmt
    (9) simple_stmt -> . expression
    (10) simple_stmt -> . expr_list
    (11) simple_stmt -> . arg_list
    (12) simple_stmt -> . assignment_stmt
    (13) simple_stmt -> . array_decl_stmt
    (14) simple_stmt -> . if_stmt
    (15) simple_stmt -> . while_stmt
    (16) simple_stmt -> . for_stmt
    (17) simple_stmt -> . output_stmt
    (18) simple_stmt -> . input_stmt
    (19) simple_stmt -> . function_stmt
    (20) simple_stmt -> . return_stmt
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression PERCENT expression
    (45) expression -> . expression LESS_THAN expression
    (46) expression -> . expression GREATER_THAN expression
    (47) expression -> . expression LESS_EQUAL expression
    (48) expression -> . expression GREATER_EQUAL expression
    (49) expression -> . expression EQUALITY expression
    (50) expression -> . expression NOT_EQUALITY expression
    (51) expression -> . MINUS expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . VAR LPAREN expression RPAREN
    (54) expression -> . VAR LPAREN expr_list RPAREN
    (55) expression -> . VAR LPAREN RPAREN
    (56) expression -> . array_index
    (58) expression -> . literal
    (62) expression -> . VAR
    (38) expr_list -> . expression COMMA expression
    (39) expr_list -> . expr_list COMMA expression
    (34) arg_list -> . INT VAR
    (35) arg_list -> . DOUBLE VAR
    (36) arg_list -> . arg_list COMMA INT VAR
    (37) arg_list -> . arg_list COMMA DOUBLE VAR
    (23) assignment_stmt -> . VAR EQUALS expression
    (24) assignment_stmt -> . array_index EQUALS expression
    (21) array_decl_stmt -> . DOUBLE array_index
    (22) array_decl_stmt -> . INT array_index
    (4) if_stmt -> . IF expression THEN NEWLINE stmt_list NEWLINE ENDIF
    (5) if_stmt -> . IF expression THEN NEWLINE stmt_list NEWLINE ELSE NEWLINE stmt_list NEWLINE ENDIF
    (6) if_stmt -> . IF expression THEN NEWLINE stmt_list NEWLINE ELSE if_stmt
    (7) while_stmt -> . WHILE expression DO NEWLINE stmt_list NEWLINE ENDWHILE
    (8) for_stmt -> . FOR assignment_stmt TO expression NEWLINE stmt_list NEWLINE NEXT VAR
    (27) output_stmt -> . OUTPUT expression
    (25) input_stmt -> . INPUT VAR
    (26) input_stmt -> . INPUT array_index
    (33) function_stmt -> . function_header NEWLINE stmt_list NEWLINE ENDSUBROUTINE
    (28) return_stmt -> . RETURN expression
    (57) array_index -> . VAR LBRACKET expression RBRACKET
    (59) literal -> . INT_CONST
    (60) literal -> . DOUBLE_CONST
    (61) literal -> . STRING_CONST
    (29) function_header -> . INT SUBROUTINE VAR LPAREN arg_list RPAREN
    (30) function_header -> . DOUBLE SUBROUTINE VAR LPAREN arg_list RPAREN
    (31) function_header -> . INT SUBROUTINE VAR LPAREN RPAREN
    (32) function_header -> . DOUBLE SUBROUTINE VAR LPAREN RPAREN

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 17
    VAR             shift and go to state 18
    INT             shift and go to state 21
    DOUBLE          shift and go to state 22
    IF              shift and go to state 23
    WHILE           shift and go to state 24
    FOR             shift and go to state 25
    OUTPUT          shift and go to state 26
    INPUT           shift and go to state 27
    RETURN          shift and go to state 29
    INT_CONST       shift and go to state 30
    DOUBLE_CONST    shift and go to state 31
    STRING_CONST    shift and go to state 32

    statement                      shift and go to state 1
    stmt_list                      shift and go to state 2
    simple_stmt                    shift and go to state 3
    expression                     shift and go to state 4
    expr_list                      shift and go to state 5
    arg_list                       shift and go to state 6
    assignment_stmt                shift and go to state 7
    array_decl_stmt                shift and go to state 8
    if_stmt                        shift and go to state 9
    while_stmt                     shift and go to state 10
    for_stmt                       shift and go to state 11
    output_stmt                    shift and go to state 12
    input_stmt                     shift and go to state 13
    function_stmt                  shift and go to state 14
    return_stmt                    shift and go to state 15
    array_index                    shift and go to state 19
    literal                        shift and go to state 20
    function_header                shift and go to state 28

state 1

    (0) S' -> statement .



state 2

    (1) statement -> stmt_list .
    (3) stmt_list -> stmt_list . NEWLINE simple_stmt

    $end            reduce using rule 1 (statement -> stmt_list .)
    NEWLINE         shift and go to state 33


state 3

    (2) stmt_list -> simple_stmt .

    NEWLINE         reduce using rule 2 (stmt_list -> simple_stmt .)
    $end            reduce using rule 2 (stmt_list -> simple_stmt .)


state 4

    (9) simple_stmt -> expression .
    (40) expression -> expression . PLUS expression
    (41) expression -> expression . MINUS expression
    (42) expression -> expression . TIMES expression
    (43) expression -> expression . DIVIDE expression
    (44) expression -> expression . PERCENT expression
    (45) expression -> expression . LESS_THAN expression
    (46) expression -> expression . GREATER_THAN expression
    (47) expression -> expression . LESS_EQUAL expression
    (48) expression -> expression . GREATER_EQUAL expression
    (49) expression -> expression . EQUALITY expression
    (50) expression -> expression . NOT_EQUALITY expression
    (38) expr_list -> expression . COMMA expression

    NEWLINE         reduce using rule 9 (simple_stmt -> expression .)
    $end            reduce using rule 9 (simple_stmt -> expression .)
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 36
    DIVIDE          shift and go to state 37
    PERCENT         shift and go to state 38
    LESS_THAN       shift and go to state 39
    GREATER_THAN    shift and go to state 40
    LESS_EQUAL      shift and go to state 41
    GREATER_EQUAL   shift and go to state 42
    EQUALITY        shift and go to state 43
    NOT_EQUALITY    shift and go to state 44
    COMMA           shift and go to state 45


state 5

    (10) simple_stmt -> expr_list .
    (39) expr_list -> expr_list . COMMA expression

    NEWLINE         reduce using rule 10 (simple_stmt -> expr_list .)
    $end            reduce using rule 10 (simple_stmt -> expr_list .)
    COMMA           shift and go to state 46


state 6

    (11) simple_stmt -> arg_list .
    (36) arg_list -> arg_list . COMMA INT VAR
    (37) arg_list -> arg_list . COMMA DOUBLE VAR

    NEWLINE         reduce using rule 11 (simple_stmt -> arg_list .)
    $end            reduce using rule 11 (simple_stmt -> arg_list .)
    COMMA           shift and go to state 47


state 7

    (12) simple_stmt -> assignment_stmt .

    NEWLINE         reduce using rule 12 (simple_stmt -> assignment_stmt .)
    $end            reduce using rule 12 (simple_stmt -> assignment_stmt .)


state 8

    (13) simple_stmt -> array_decl_stmt .

    NEWLINE         reduce using rule 13 (simple_stmt -> array_decl_stmt .)
    $end            reduce using rule 13 (simple_stmt -> array_decl_stmt .)


state 9

    (14) simple_stmt -> if_stmt .

    NEWLINE         reduce using rule 14 (simple_stmt -> if_stmt .)
    $end            reduce using rule 14 (simple_stmt -> if_stmt .)


state 10

    (15) simple_stmt -> while_stmt .

    NEWLINE         reduce using rule 15 (simple_stmt -> while_stmt .)
    $end            reduce using rule 15 (simple_stmt -> while_stmt .)


state 11

    (16) simple_stmt -> for_stmt .

    NEWLINE         reduce using rule 16 (simple_stmt -> for_stmt .)
    $end            reduce using rule 16 (simple_stmt -> for_stmt .)


state 12

    (17) simple_stmt -> output_stmt .

    NEWLINE         reduce using rule 17 (simple_stmt -> output_stmt .)
    $end            reduce using rule 17 (simple_stmt -> output_stmt .)


state 13

    (18) simple_stmt -> input_stmt .

    NEWLINE         reduce using rule 18 (simple_stmt -> input_stmt .)
    $end            reduce using rule 18 (simple_stmt -> input_stmt .)


state 14

    (19) simple_stmt -> function_stmt .

    NEWLINE         reduce using rule 19 (simple_stmt -> function_stmt .)
    $end            reduce using rule 19 (simple_stmt -> function_stmt .)


state 15

    (20) simple_stmt -> return_stmt .

    NEWLINE         reduce using rule 20 (simple_stmt -> return_stmt .)
    $end            reduce using rule 20 (simple_stmt -> return_stmt .)


state 16

    (51) expression -> MINUS . expression
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression PERCENT expression
    (45) expression -> . expression LESS_THAN expression
    (46) expression -> . expression GREATER_THAN expression
    (47) expression -> . expression LESS_EQUAL expression
    (48) expression -> . expression GREATER_EQUAL expression
    (49) expression -> . expression EQUALITY expression
    (50) expression -> . expression NOT_EQUALITY expression
    (51) expression -> . MINUS expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . VAR LPAREN expression RPAREN
    (54) expression -> . VAR LPAREN expr_list RPAREN
    (55) expression -> . VAR LPAREN RPAREN
    (56) expression -> . array_index
    (58) expression -> . literal
    (62) expression -> . VAR
    (57) array_index -> . VAR LBRACKET expression RBRACKET
    (59) literal -> . INT_CONST
    (60) literal -> . DOUBLE_CONST
    (61) literal -> . STRING_CONST

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 17
    VAR             shift and go to state 49
    INT_CONST       shift and go to state 30
    DOUBLE_CONST    shift and go to state 31
    STRING_CONST    shift and go to state 32

    expression                     shift and go to state 48
    array_index                    shift and go to state 50
    literal                        shift and go to state 20

state 17

    (52) expression -> LPAREN . expression RPAREN
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression PERCENT expression
    (45) expression -> . expression LESS_THAN expression
    (46) expression -> . expression GREATER_THAN expression
    (47) expression -> . expression LESS_EQUAL expression
    (48) expression -> . expression GREATER_EQUAL expression
    (49) expression -> . expression EQUALITY expression
    (50) expression -> . expression NOT_EQUALITY expression
    (51) expression -> . MINUS expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . VAR LPAREN expression RPAREN
    (54) expression -> . VAR LPAREN expr_list RPAREN
    (55) expression -> . VAR LPAREN RPAREN
    (56) expression -> . array_index
    (58) expression -> . literal
    (62) expression -> . VAR
    (57) array_index -> . VAR LBRACKET expression RBRACKET
    (59) literal -> . INT_CONST
    (60) literal -> . DOUBLE_CONST
    (61) literal -> . STRING_CONST

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 17
    VAR             shift and go to state 49
    INT_CONST       shift and go to state 30
    DOUBLE_CONST    shift and go to state 31
    STRING_CONST    shift and go to state 32

    expression                     shift and go to state 51
    array_index                    shift and go to state 50
    literal                        shift and go to state 20

state 18

    (53) expression -> VAR . LPAREN expression RPAREN
    (54) expression -> VAR . LPAREN expr_list RPAREN
    (55) expression -> VAR . LPAREN RPAREN
    (62) expression -> VAR .
    (23) assignment_stmt -> VAR . EQUALS expression
    (57) array_index -> VAR . LBRACKET expression RBRACKET

    LPAREN          shift and go to state 52
    PLUS            reduce using rule 62 (expression -> VAR .)
    MINUS           reduce using rule 62 (expression -> VAR .)
    TIMES           reduce using rule 62 (expression -> VAR .)
    DIVIDE          reduce using rule 62 (expression -> VAR .)
    PERCENT         reduce using rule 62 (expression -> VAR .)
    LESS_THAN       reduce using rule 62 (expression -> VAR .)
    GREATER_THAN    reduce using rule 62 (expression -> VAR .)
    LESS_EQUAL      reduce using rule 62 (expression -> VAR .)
    GREATER_EQUAL   reduce using rule 62 (expression -> VAR .)
    EQUALITY        reduce using rule 62 (expression -> VAR .)
    NOT_EQUALITY    reduce using rule 62 (expression -> VAR .)
    COMMA           reduce using rule 62 (expression -> VAR .)
    NEWLINE         reduce using rule 62 (expression -> VAR .)
    $end            reduce using rule 62 (expression -> VAR .)
    EQUALS          shift and go to state 53
    LBRACKET        shift and go to state 54


state 19

    (56) expression -> array_index .
    (24) assignment_stmt -> array_index . EQUALS expression

    PLUS            reduce using rule 56 (expression -> array_index .)
    MINUS           reduce using rule 56 (expression -> array_index .)
    TIMES           reduce using rule 56 (expression -> array_index .)
    DIVIDE          reduce using rule 56 (expression -> array_index .)
    PERCENT         reduce using rule 56 (expression -> array_index .)
    LESS_THAN       reduce using rule 56 (expression -> array_index .)
    GREATER_THAN    reduce using rule 56 (expression -> array_index .)
    LESS_EQUAL      reduce using rule 56 (expression -> array_index .)
    GREATER_EQUAL   reduce using rule 56 (expression -> array_index .)
    EQUALITY        reduce using rule 56 (expression -> array_index .)
    NOT_EQUALITY    reduce using rule 56 (expression -> array_index .)
    COMMA           reduce using rule 56 (expression -> array_index .)
    NEWLINE         reduce using rule 56 (expression -> array_index .)
    $end            reduce using rule 56 (expression -> array_index .)
    EQUALS          shift and go to state 55


state 20

    (58) expression -> literal .

    PLUS            reduce using rule 58 (expression -> literal .)
    MINUS           reduce using rule 58 (expression -> literal .)
    TIMES           reduce using rule 58 (expression -> literal .)
    DIVIDE          reduce using rule 58 (expression -> literal .)
    PERCENT         reduce using rule 58 (expression -> literal .)
    LESS_THAN       reduce using rule 58 (expression -> literal .)
    GREATER_THAN    reduce using rule 58 (expression -> literal .)
    LESS_EQUAL      reduce using rule 58 (expression -> literal .)
    GREATER_EQUAL   reduce using rule 58 (expression -> literal .)
    EQUALITY        reduce using rule 58 (expression -> literal .)
    NOT_EQUALITY    reduce using rule 58 (expression -> literal .)
    COMMA           reduce using rule 58 (expression -> literal .)
    NEWLINE         reduce using rule 58 (expression -> literal .)
    $end            reduce using rule 58 (expression -> literal .)
    RPAREN          reduce using rule 58 (expression -> literal .)
    THEN            reduce using rule 58 (expression -> literal .)
    DO              reduce using rule 58 (expression -> literal .)
    TO              reduce using rule 58 (expression -> literal .)
    RBRACKET        reduce using rule 58 (expression -> literal .)


state 21

    (34) arg_list -> INT . VAR
    (22) array_decl_stmt -> INT . array_index
    (29) function_header -> INT . SUBROUTINE VAR LPAREN arg_list RPAREN
    (31) function_header -> INT . SUBROUTINE VAR LPAREN RPAREN
    (57) array_index -> . VAR LBRACKET expression RBRACKET

    VAR             shift and go to state 56
    SUBROUTINE      shift and go to state 58

    array_index                    shift and go to state 57

state 22

    (35) arg_list -> DOUBLE . VAR
    (21) array_decl_stmt -> DOUBLE . array_index
    (30) function_header -> DOUBLE . SUBROUTINE VAR LPAREN arg_list RPAREN
    (32) function_header -> DOUBLE . SUBROUTINE VAR LPAREN RPAREN
    (57) array_index -> . VAR LBRACKET expression RBRACKET

    VAR             shift and go to state 59
    SUBROUTINE      shift and go to state 61

    array_index                    shift and go to state 60

state 23
